--- a/index.html
+++ b/index.html
@@ -210,7 +210,56 @@
     </main>
 
 
-    <footer>
+    <footer class="pb-[50px]">
+        <div class="relative mt-[40px] lg:mt-[120px] lg:mb-[50px]">
+      <img class="w-[393px] h-[276px] lg:w-full lg:h-full" src="assets/news-letter-bg.png" alt="">
+      <div class="absolute inset-0 flex flex-col items-center justify-center rounded-2xl ">
+        <p class="text-white text-[20px] lg:text-[50px] font-bold" style="font-family: 'Noto Serif', serif;">Join the colorful Bunch</p>
+        <div class="flex mt-[23px]">
+            <input class="bg-white w-[218px] h-[50px] lg:w-[644px] lg:h-[50px] p-6" type="email" name="" id="" placeholder="Write email">
+        <button class="font-semibold text-[16px] w-[103px] h-[50px]
+        lg:w-[186px] lg:h-[50px] bg-orange-600 text-white">Subscribe</button>
+        </div>
+    </div>
+    </div>
+
+
+
+    <div class="flex flex-col lg:flex-row gap-[20px] lg:gap-[110px] mx-[20px] lg:mx-[160px] mt-[50px]">
+        <div>
+        <img class="w-[180px] h-[109px] lg:w-[135px] lg:h-[82px]" src="assets/logo.png" alt="">
+        <p class="text-[16px] lg:text-[22px] text-[#8987A1] mt-[16px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+        </div>
+
+
+        <div class="flex flex-col text-[#6B7280] gap-[26px] lg:gap-[32px]">
+            <a class="whitespace-nowrap" href="">Home</a>
+            <a class="whitespace-nowrap" href="">About Us</a>
+            <a class="whitespace-nowrap" href="">Blog</a>
+            <a class="whitespace-nowrap" href="">FAQ</a>
+            <a class="whitespace-nowrap" href="">Contact Us</a>
+
+        </div>
+
+        <div class="flex flex-col text-[#6B7280]  gap-[32px]">
+            <a class="whitespace-nowrap" href="">Features</a>
+            <a class="whitespace-nowrap" href="">Pricing</a>
+            <a class="whitespace-nowrap" href="">Privacy Policy</a>
+            <a class="whitespace-nowrap" href="">Terms of Service</a>
+            <a class="whitespace-nowrap" href="">Help Center</a>
+
+        </div>
+       
+     <div class="flex gap-[24px]">
+    <a href="#" > <img class="w-[36px] h-[36px] lg:w-[100px]  lg:h-[30px]" src="assets/icon-linkedin.png" alt="LinkedIn"> </a>
+    <a href="#"> <img class="w-[36px] lg:w-[100px] h-[36px] lg:h-[30px]" src="assets/icon-twitter.png" alt="Twitter"> </a>
+    <a href="#"> <img class="w-[36px] lg:w-[100px] h-[36px] lg:h-[30px]" src="assets/icon-facebook.png" alt="Facebook"> </a>
+    <a href="" > <img class="w-[36px] lg:w-[100px] h-[36px] lg:h-[30px]" src="assets/icon-youtube.png" alt="YouTube"> </a>
+        </div>
+
+    </div>
+
+
 
     </footer>
     
