--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-
+    <link rel="stylesheet" href="tail.css">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif&display=swap" rel="stylesheet">
      <script src="https://kit.fontawesome.com/0cf882a41a.js" crossorigin="anonymous"></script>
 
@@ -205,7 +205,7 @@
 
     <footer class="pb-[50px]">
         <div class="relative mt-[40px] lg:mt-[120px] lg:mb-[50px]">
-      <img class="w-[393px] h-[276px] lg:w-full lg:h-full" src="assets/news-letter-bg.png" alt="">
+      <img class="w-full h-[276px] lg:w-full lg:h-full" src="assets/news-letter-bg.png" alt="">
       <div class="absolute inset-0 flex flex-col items-center justify-center rounded-2xl ">
         <p class="text-white text-[20px] lg:text-[50px] font-bold" style="font-family: 'Noto Serif', serif;">Join the colorful Bunch</p>
         <div class="flex mt-[23px]">
